<resources>
    <!-- App Global -->
    <string name="app_name">XFit Россошь</string>
    <string name="username">Павел П.</string>
    <string name="user_email">pavel.pigin@gmail.com</string>
    <!-- Login Screen Strings -->
    <string name="welcome">Добро пожаловать!</string>
    <string name="enter">Пожалуйста, введите свои данные</string>
    <string name="denied">Неверный логин или пароль</string>
    <string name="login_hint">Телефон</string>
    <string name="password_hint">Пароль</string>
    <string name="login_button_text">Войти</string>
    <string name="cancel_button_txt">Отмена</string>

    <!-- AppBar Strings -->
    <string name="help">Помощь</string>
    <string name="connect">Связаться</string>
    <string name="exit">Выход</string>
    <string name="language">Язык</string>
    <!-- Drawer Menu Strings -->
    <string name="cat_1">Клуб</string>
    <string name="about_the_club_str">О клубе</string>
    <string name="rates_str">Тарифы</string>
    <string name="media_str">Медиа</string>
    <string name="contacts_str">Контакты</string>
    <string name="fitness_counters_str">Фитнесс-Счётчики</string>
    <string name="cat_2">Аккаунт</string>
    <string name="profile_str">Мой профиль</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- Blank Strings -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- About The Club Strings -->
    <string name="about_xfit_rossosh">
         X-Fit Studio Россошь – это современная фитнес-студия в городе Россошь. Уютное и стильное пространство, оборудованное качественными и самыми необходимыми тренажерами, обеспечивает комфортные и безопасные занятия для каждого члена клуба.</string>

    <string name="header1">Smart Fitness</string>
    <string name="header1_text">Уникальная система тренировок, разработанная экспертами сети, развивает основные физические качества и приводит к стойким результатам.</string>

    <string name="header2">Инновационный тренажёрный зал</string>
    <string name="header2_text">Тренажеры от ведущих мировых брендов помогают добиться желаемых целей, будь то похудение, набор мышечной массы или поддержание тонуса.</string>

    <string name="header3">Групповые программы</string>
    <string name="header3_text">Спектр тренировок включает форматы на основе системы Smart Fitness и много актуальных и интересных направлений.</string>

    <string name="header5">Ждём Вас!</string>

    <!-- Contacts Strings -->
    <string name="to_contact_us">Связаться с нами можно через:</string>
    <string name="xfit_email">Email: rossosh.xfit@mail.ru</string>
    <string name="xfit_phone">Телефон: +7 (930) 422-56-76</string>
    <string name="xfit_inst">xfitstudio_rossosh</string>
    <string name="xfit_vk">xfitrossosh</string>

    <string name="to_see_us">Наши соцсети:</string>
    <string name="see_in_vk">ВКонтакте:</string>
    <string name="see_in_inst">Instagram:</string>


    <!-- Fitness-Counters Strings -->
    <string name="help_in_fitness">В помощь к тренировкам обязательно воспользуйтесь:</string>
    <string name="online_service">Нашими Онлайн-услугами</string>
    <string name="online_store_xfit">Интернет-магазином XFit</string>
    <string name="fitness_testing">Фитнесс-тестированием</string>
    <string name="more">Cсылка</string>
    <string name="more_apps">Ваш надёжный тренер:</string>
    <string name="google_fit">Google Fit: трекер активности</string>
    <string name="download">Скачать</string>
    <string name="google_fit_description"> Google Fit поможет вам вести более активный и здоровый образ жизни! Какая физическая активность вам нужна и сколько времени нужно уделять тренировкам? С Google Fit вы найдете ответы на эти вопросы.</string>


    <!-- Media Strings -->
    <string name="our_media">Наши медиа:</string>
    <string name="see_in_yt">YouTube:</string>
    <string name="xfit_yt">XFitRussia</string>

    <!-- My Profile Strings -->
    <string name="more_info">Больше информации в меню</string>

    <!-- Rates Strings -->
    <string name="rates_header">Услуги в XFit</string>
    <string name="waterpool">Бассейн в клубах</string>
    <string name="gym">Тренажерный зал</string>
    <string name="childrens_fitness">Детский фитнесс</string>
    <string name="group_prog">Групповые программы</string>
    <string name="game_sports">Игровой спорт</string>
    <string name="tennis">Теннисные корты</string>
    <string name="personal_tr">Персональные тренировки</string>
    <string name="button_txt">Узнать больше</string>
</resources>