<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MediaFr"
    android:layout_marginTop="?attr/actionBarSize">


    <TextView
        android:id="@+id/help_in_fitness_txt3"
        android:layout_width="378dp"
        android:layout_height="29dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:gravity="center_horizontal"
        android:text="@string/our_media"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="33dp"
        android:layout_height="33dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/vk_logo"
        app:layout_constraintStart_toStartOf="@+id/help_in_fitness_txt3"
        app:layout_constraintTop_toBottomOf="@+id/imageView10" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="164dp"
        android:text="@string/see_in_yt"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/imageView12"
        app:layout_constraintTop_toBottomOf="@+id/help_in_fitness_txt3" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="108dp"
        android:text="@string/see_in_vk"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/imageView11"
        app:layout_constraintTop_toBottomOf="@+id/help_in_fitness_txt3" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="108dp"
        android:text="@string/xfit_vk"
        android:textSize="15sp"
        android:textStyle="normal"
        android:typeface="serif"
        app:layout_constraintStart_toEndOf="@+id/textView15"
        app:layout_constraintTop_toBottomOf="@+id/help_in_fitness_txt3" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="33dp"
        android:layout_height="33dp"
        android:layout_marginTop="48dp"
        android:src="@drawable/instagram_logo"
        app:layout_constraintStart_toStartOf="@+id/help_in_fitness_txt3"
        app:layout_constraintTop_toBottomOf="@+id/help_in_fitness_txt3" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="56dp"
        android:text="@string/see_in_inst"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/imageView10"
        app:layout_constraintTop_toBottomOf="@+id/help_in_fitness_txt3" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="56dp"
        android:text="@string/xfit_inst"
        android:textSize="15sp"
        android:typeface="serif"
        app:layout_constraintStart_toEndOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/help_in_fitness_txt3" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="33dp"
        android:layout_height="33dp"
        android:layout_marginTop="28dp"
        android:src="@drawable/youtube_logo"
        app:layout_constraintStart_toStartOf="@+id/help_in_fitness_txt3"
        app:layout_constraintTop_toBottomOf="@+id/imageView11" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="164dp"
        android:text="@string/xfit_yt"
        android:textSize="15sp"
        android:typeface="serif"
        app:layout_constraintStart_toEndOf="@+id/textView18"
        app:layout_constraintTop_toBottomOf="@+id/help_in_fitness_txt3" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/materialDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>