<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    tools:context=".fragments.FitnessCountersFr">


    <TextView
        android:id="@+id/help_in_fitness_txt"
        android:layout_width="376dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:gravity="center_horizontal"
        android:text="@string/help_in_fitness"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/help_in_fitness_txt2"
        android:layout_width="378dp"
        android:layout_height="29dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="292dp"
        android:layout_marginEnd="10dp"
        android:gravity="center_horizontal"
        android:text="@string/more_apps"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/online_store_xfit_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:text="@string/online_store_xfit"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="@+id/online_service_txt"
        app:layout_constraintTop_toBottomOf="@+id/help_in_fitness_txt" />

    <TextView
        android:id="@+id/fitness_testing_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="145dp"
        android:text="@string/fitness_testing"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="@+id/online_store_xfit_txt"
        app:layout_constraintTop_toBottomOf="@+id/help_in_fitness_txt" />

    <TextView
        android:id="@+id/online_service_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="33dp"
        android:text="@string/online_service"
        android:textSize="17sp"
        app:layout_constraintStart_toEndOf="@+id/help_gr"
        app:layout_constraintTop_toBottomOf="@+id/help_in_fitness_txt" />

    <ImageView
        android:id="@+id/help_gr"
        android:layout_width="33dp"
        android:layout_height="33dp"
        android:layout_marginTop="28dp"
        android:src="@drawable/ic_help_gr"
        app:layout_constraintStart_toStartOf="@+id/help_in_fitness_txt"
        app:layout_constraintTop_toBottomOf="@+id/help_in_fitness_txt" />

    <ImageView
        android:id="@+id/fit_testing_gr"
        android:layout_width="33dp"
        android:layout_height="33dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_receipt_gr"
        app:layout_constraintEnd_toEndOf="@+id/help_gr"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/help_gr"
        app:layout_constraintTop_toBottomOf="@+id/help_gr" />

    <ImageView
        android:id="@+id/shop_ic_gr"
        android:layout_width="33dp"
        android:layout_height="33dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_shop_gr"
        app:layout_constraintEnd_toEndOf="@+id/fit_testing_gr"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/fit_testing_gr"
        app:layout_constraintTop_toBottomOf="@+id/fit_testing_gr" />

    <Button
        android:id="@+id/button_more_1"
        android:layout_width="90dp"
        android:layout_height="38dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:text="@string/more"
        android:textAllCaps="false"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/online_service_txt"
        app:layout_constraintTop_toBottomOf="@+id/help_in_fitness_txt" />

    <Button
        android:id="@+id/button_more_2"
        android:layout_width="90dp"
        android:layout_height="38dp"
        android:layout_marginTop="16dp"
        android:text="@string/more"
        android:textAllCaps="false"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/button_more_1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button_more_1"
        app:layout_constraintTop_toBottomOf="@+id/button_more_1" />

    <Button
        android:id="@+id/button_more_3"
        android:layout_width="90dp"
        android:layout_height="38dp"
        android:layout_marginTop="16dp"
        android:text="@string/more"
        android:textAllCaps="false"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/button_more_2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button_more_2"
        app:layout_constraintTop_toBottomOf="@+id/button_more_2" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="276dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="33dp"
        android:layout_height="33dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/google_fit_logo"
        app:layout_constraintStart_toStartOf="@+id/help_in_fitness_txt2"
        app:layout_constraintTop_toBottomOf="@+id/help_in_fitness_txt2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="30dp"
        android:text="@string/google_fit"
        android:textSize="17sp"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/help_in_fitness_txt2" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="378dp"
        android:layout_height="101dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/google_fit_description"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/help_in_fitness_txt2" />

    <Button
        android:id="@+id/button"
        android:layout_width="289dp"
        android:layout_height="43dp"
        android:layout_marginTop="508dp"
        android:text="@string/download"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>